--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,23 +1,18 @@
-# Common settings that can be referenced across sections
 common:
-  excluded_devices: [841, 1005]
-  intervals:
-    gps: 300    # seconds
-    acc: 60     # seconds
   timezone: "America/Denver"
+  gps_sample_interval: 300          # Expected seconds between GPS
+  gps_sample_interval: 60           # Expected seconds between Accelerometer 
+  excluded_devices: [841, 1005] 
 
-# Data source paths
-paths:
+
+io:
   format: "multiple_files"
   gps_directory: "data/raw/RB_22/gps"
   accelerometer_directory: "data/raw/RB_22/accelerometer"
-  file_pattern: "*.csv"
   labeled_data_path: "data/raw/RB_22/labeled/gps_observations_2022.csv"
-
-device_id: 824  # Test with single cow
+  file_pattern: "*.csv"
 
 validation:
-  timezone: !ref common.timezone
   start_datetime: "2022-01-15 00:00:00"
   end_datetime: "2022-03-22 23:59:59"
   lat_min: -90
@@ -30,23 +25,32 @@ validation:
   temp_max: 99
   min_satellites: 0
   max_dop: 10.0
-  excluded_devices: !ref common.excluded_devices
+  COVERAGE_THRESHOLD: 70            # Minimum ratio of (actual / expected) GPS data needed to include the device
 
 features:
-  enable_axis_features: true
-  enable_magnitude_features: true
+  enable_axis_features: true        # Compute features for each axes
+  enable_magnitude_features: true   # Compute features for the magnitudes
   feature_types:
-    - "BASIC_STATS"
-    - "ZERO_CROSSINGS"
-    - "PEAK_FEATURES"
-    - "ENTROPY"
-    - "CORRELATION"
-    - "SPECTRAL"
-  gps_sample_interval: !ref common.intervals.gps
-  acc_sample_interval: !ref common.intervals.acc
-  
+    - "BASIC_STATS"                 # Mean, variance of the window
+    - "ZERO_CROSSINGS"              # Count of transitions from - to + or + to -
+    - "PEAK_FEATURES"               # Statistics covering the peaks of the window
+    - "ENTROPY"                     # Compute signal entropy features
+    - "CORRELATION"                 # Compute correlation between axes
+    # - "SPECTRAL"                    # Compute frequency domain features
+ 
 labels:
-  labeled_agg_method:
-    - "MODE"
-    - "RAW"
-    - "PERCENTILE"
+  # labeled_agg_method: "MODE"        # The most frequent activity in the window
+  labeled_agg_method: "RAW"           # The activity at the end of the window
+  # labeled_agg_method: "PERCENTILE"  # A weighted choice of activity
+
+  valid_activities:
+    - "Resting"
+    - "Grazing"
+    - "Traveling"
+    - "Fighting"
+    - "Scratching"
+    - "Drinking"
+    - "Mineral"
+
+testing:
+  device_id: 824  # Test with single cow  
