--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,9 @@ dependencies = [
     "pydantic>=2.0.0",
     "pyyaml>=6.0.0",
     "pytz>=2023.3",
-    "pyproj>=3.7.0"
+    "pyproj>=3.7.0",
+    "pandas-stubs>=2.0.0",
+    "types-pytz>=2025.1",
 ]
 
 [project.optional-dependencies]
