--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,11 @@ dev = [
     "mypy>=1.0.0",
 ]
 
+[tool.hatch.metadata]
+requires-external = [
+    "R >= 4.0.0",
+]
+
 [tool.hatch.build.targets.wheel]
 packages = ["src/cowstudyapp"]
 
