--- a/config/RB_19_config.yaml
+++ b/config/RB_19_config.yaml
@@ -2,7 +2,7 @@ common:
   timezone: "America/Denver"
   gps_sample_interval: 300          # Expected seconds between GPS
   gps_sample_interval: 60           # Expected seconds between Accelerometer 
-  excluded_devices: [] 
+  excluded_devices: [609, 612] 
 
 
 io:
@@ -13,12 +13,42 @@ io:
   file_pattern: "*.csv"
 
   processed_data_path: "data/processed/RB_19/all_cows_labeled_mode.csv"
+  
+  tag_to_device:
+    '6082': '609'
+    '6085': '610'
+    '6094': '614'
+    '5090': '602'
+    '5051': '612'
+    '5010': '617'
+    '3065': '603'
+    '3091': '611'
+    '0276': '600'
+    '0286': '605'
+    '0256': '606'
+    '0105': '608'
+    '0174': '613'
+    '0163': '616'
+    '0101': '604'
+    '0024': '607'
+    '0011': '615'
+
+
+  label_to_value:
+    't': 'Traveling'
+    'g': 'Grazing'
+    's': 'Standing'
+    'm': 'Mineral'
+    'r': 'Resting'
+    'l': 'Laying'
+    'd': 'Drinking'
+    'f': 'Fighting'
 
 
 
 validation:
-  start_datetime: "2018-11-16 00:00:00" #"2022-01-15 00:00:00"  
-  end_datetime: "2019-02-08 23:55:00" #"2022-03-22 23:59:59"
+  start_datetime: "2018-11-17 00:00:00" #"2022-01-15 00:00:00"  
+  end_datetime: "2019-02-09 00:00:00" #"2022-03-22 23:59:59"
   lat_min: -90
   lat_max: 90
   lon_min: -180
@@ -47,34 +77,7 @@ labels:
   # labeled_agg_method: "RAW"           # The activity at the end of the window
   # labeled_agg_method: "PERCENTILE"  # A weighted choice of activity
 
-  tag_to_device:
-    '6082': '609'
-    '6085': '610'
-    '6094': '614'
-    '5090': '602'
-    '5051': '612'
-    '5010': '617'
-    '3065': '603'
-    '3091': '611'
-    '276': '600'
-    '286': '605'
-    '256': '606'
-    '105': '608'
-    '174': '613'
-    '163': '616'
-    '0101': '604'
-    '024': '607'
-    '011': '615'
 
-  label_to_value:
-    't': 'Traveling'
-    'g': 'Grazing'
-    's': 'Scratching'
-    'm': 'Mineral'
-    'r': 'Resting'
-    'l': 'Laying'
-    'd': 'Drinking'
-    'f': 'Fighting'
 
 
   # valid_activities:
@@ -86,10 +89,6 @@ labels:
   #   - "Drinking"
   #   - "Mineral"
 
-# testing:
-#   device_id: 824  # Test with single cow  
-
-
 # This is the section where options for the momentuHMM can we defined.
 # Ideally, the LSTM config will also live here
 # analysis:
@@ -99,14 +98,14 @@ labels:
 analysis:
   # mode: "LOOCV"     # Do LOOCV on the target dataset. 
   mode: "PRODUCT"   # predict activity labels for a full dataset
-  target_dataset: "data/processed/RB_22/all_cows_labeled.csv"  # Required The dataset to make predictions on
+  target_dataset: "data/processed/RB_19/all_cows_labeled_mode.csv"  # Required The dataset to make predictions on
   
   # Optional, only for PRODUCT mode. The reference training information. Either `dataset` or `model`
-  training_info:     
+  # training_info:     
     # training_info_type: "dataset" # A dataset to create a trained model from
     # training_info_path: "cowstudyapp/data/processed/dataset2.csv"
-    training_info_type: "model"   # A saved trained model  
-    training_info_path: "data/analysis_results/hmm/PRODUCT/20250212_005053/trained_model.rds"
+    # training_info_type: "model"   # A saved trained model  
+    # training_info_path: "data/analysis_results/hmm/PRODUCT/20250212_005053/trained_model.rds"
 
 
   r_executable: "C:/Program Files/R/R-4.3.0/bin/Rscript.exe"
