--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,12 @@ dependencies = [
     "pyproj>=3.7.0",
     "pandas-stubs>=2.0.0",
     "types-pytz>=2025.1",
+    "matplotlib>=3.7.0",
+    "tensorflow>=2.12.0",
+    "scikit-learn>=1.2.0",
+    "seaborn>=0.12.0",
+    "statsmodels>=0.14.4",
+    "openpyxl>=3.1.5"
 ]
 
 [project.optional-dependencies]
