--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ dependencies = [
     "scikit-learn>=1.2.0",
     "seaborn>=0.12.0",
     "statsmodels>=0.14.4",
-    "openpyxl>=3.1.5"
+    "openpyxl>=3.1.5",
+    "ephem>=4.2"
 ]
 
 [project.optional-dependencies]
