--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,9 @@ dependencies = [
     "seaborn>=0.12.0",
     "statsmodels>=0.14.4",
     "openpyxl>=3.1.5",
-    "ephem>=4.2"
+    "ephem>=4.2",
+    "tabulate>=0.9.0",
+    "pymer4>=0.8.2"
 ]
 
 [project.optional-dependencies]
