--- a/config/RB_22_config.yaml
+++ b/config/RB_22_config.yaml
@@ -209,7 +209,7 @@ visuals:
     show_night: true
 
   temperature_graph:
-    run: true
+    run: false
     daynight: 'day' #'day' #'night' 'both'
     show_curve: true
     # extension: 'MDT_Plots/'
