--- a/config/RB_22_config.yaml
+++ b/config/RB_22_config.yaml
@@ -111,8 +111,8 @@ labels:
     - "Mineral"
 
 analysis:
-  # mode: "LOOCV"     # Do LOOCV on the target dataset. 
-  mode: "PRODUCT"   # predict activity labels for a full dataset
+  mode: "LOOCV"     # Do LOOCV on the target dataset. 
+  # mode: "PRODUCT"   # predict activity labels for a full dataset
   target_dataset: "data/processed/RB_22/all_cows_labeled.csv"  # Required The dataset to make predictions on
   # training_info_path: "data/analysis_results/hmm/FinalModels/RB_22_Paper_Model/trained_model.rds" # No CV, no filter cows, no covariate.
 
@@ -126,7 +126,7 @@ analysis:
   day_only: false
 
   hmm:
-    enabled: true
+    enabled: false
     time_covariate: false
 
     states: # The states to use in the HMM
@@ -183,7 +183,7 @@ analysis:
           - "WRAPPEDCAUCHY"
 
   lstm:
-    enabled: false
+    enabled: true
     states: # The states to use in the LSTM
       - "Grazing"
       - "Resting"
@@ -193,8 +193,9 @@ analysis:
       - "angle"
       - "magnitude_mean"
       - "magnitude_var"
-    max_length: 20
-    max_time_gap: 960
+    max_length: 'daily'
+    # max_length: 20
+    max_time_gap: -1
     epochs: 100
 
 
@@ -212,7 +213,7 @@ visuals:
     show_night: true
 
   temperature_graph:
-    run: true
+    run: false
     daynight: 'day' #'day' #'night' 'both'
     show_curve: true
     # extension: 'MDT_Plots/'
