--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ dependencies = [
     "openpyxl>=3.1.5",
     "ephem>=4.2",
     "tabulate>=0.9.0",
-    "pymer4>=0.8.2"
+    "pymer4>=0.8.2",
+    "rpy2>=3.5.13"
 ]
 
 [project.optional-dependencies]
