Altered how sequences are applied in BO

--- a/config/RB_22_config.yaml
+++ b/config/RB_22_config.yaml
@@ -197,7 +197,7 @@ analysis:
   lstm:
     enabled: true
     
-    ops: false
+    ops: true
 
 
     ################ Warning these two will SIGNIFICANTLY increase runtime to find parameters 
