--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,8 @@ dependencies = [
     "openpyxl>=3.1.5",    
     "ephem>=4.2",    
     "tabulate>=0.9.0",
-    #    "pymer4>=0.8.2",
-    #    "rpy2>=3.5.13",
+    "pymer4>=0.8.2",
+    "rpy2>=3.5.13",
     "scikit-optimize>=0.10.2"
     ]
     
