--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,35 +14,23 @@ jobs:
         python-version: ["3.10", "3.11", "3.12"]
 
     steps:
-    - name: Set up R
-      uses: r-lib/actions/setup-r@v2
-      with:
-        r-version: '4.4.1'
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev
-
-    - name: Install required R packages
-      run: |
-        Rscript -e 'install.packages(c("lme4", "lmerTest", "Matrix", "Rcpp", "RcppEigen", "data.table", "pbkrtest", "afex", "pymer4"), repos="https://cloud.r-project.org")'
-    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -e ".[dev]"
-    
+
     - name: Run tests
       run: |
         pytest tests/ --cov=cowstudyapp --cov-report=xml
-    
+
     - name: Run linting
       run: |
         black . --check
