removed an unused pytest import
Signed-off-by: Aspho1 <thl3141@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,4 +36,4 @@ jobs:
         black . # --check
         isort . # --check
         flake8 .
-        mypy src/cowstudyapp
+        mypy cowstudyapp
