Resolving more mypy issues
Signed-off-by: Aspho1 <thl3141@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,5 +35,8 @@ jobs:
       run: |
         black . # --check
         isort . # --check
-        # flake8 .
-        mypy cowstudyapp
+
+
+    - name: Type check
+      run: |
+        mypy cowstudyapp --config-file mypy.ini
