--- a/mypy.ini
+++ b/mypy.ini
@@ -1,8 +1,9 @@
 # CowStudyApp/mypy.ini
 [mypy]
+python_version = 3.10
+
+[mypy-sklearn.*]
 ignore_missing_imports = True
-disallow_untyped_defs = True
-check_untyped_defs = True
-exclude = (?x)(
-    ^tests/.*$
-)
+
+[mypy-tensorflow.*]
+ignore_missing_imports = True
